--- a/app/src/main/res/layout/medication_detailed_fragment.xml
+++ b/app/src/main/res/layout/medication_detailed_fragment.xml
@@ -11,21 +11,24 @@
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+        >
 
         <TableRow>
-
             <TextView
                 style="@style/CustomText"
                 android:layout_width="165dp"
-                android:text="Medication Name" />
+                android:text="Medication Name"
+                />
 
             <EditText
                 android:id="@+id/editText_medNameDetailed"
                 android:layout_span="2"
                 android:width="150dp"
                 android:hint="Enter name here"
-                android:maxLength="30" />
+                android:maxLength="30"
+                android:background="@null"
+                />
         </TableRow>
 
         <TableRow>
@@ -33,13 +36,14 @@
             <TextView
                 style="@style/CustomText"
                 android:layout_width="80dp"
-                android:text="unit" />
+                android:text="Unit" />
 
             <EditText
                 android:id="@+id/unitDetailed"
                 android:width="150dp"
                 android:hint="Enter unit here"
-                android:inputType="number" />
+                android:inputType="number"
+                android:background="@null"/>
 
             <Spinner
                 android:id="@+id/unitTypeSpinner"
@@ -61,6 +65,7 @@
                 android:layout_span="2"
                 android:width="150dp"
                 android:hint="Quantity?"
+                android:background="@null"
                 android:inputType="number" />
         </TableRow>
 
@@ -75,6 +80,7 @@
                 android:id="@+id/editText_conditionDetailed"
                 android:layout_span="2"
                 android:width="150dp"
+                android:background="@null"
                 android:hint="What are you taking this medication for?" />
         </TableRow>
 
@@ -103,6 +109,7 @@
                 android:layout_span="2"
                 android:width="150dp"
                 android:hint="Hours between each dose"
+                android:background="@null"
                 android:inputType="number" />
         </TableRow>
 
@@ -127,6 +134,7 @@
             <TextView
                 android:id="@+id/textView_displaySettingTimeDetailed"
                 style="@style/CustomText"
+                android:background="@null"
                 android:text="" />
 
         </TableRow>
@@ -159,11 +167,17 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/btnNextDetailed"
+        android:id="@+id/btnEditDetailed"
         style="@style/btnStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Next" />
+        android:text="Edit" />
+    <Button
+        android:id="@+id/btnBackDetailed"
+        style="@style/btnStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Back" />
     <!--        android:onClick="volleyPost"-->
 
 
