--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="CustomText"
         parent="@style/Widget.AppCompat.TextView">
         <item name="android:width">120dp</item>
+        <item name="android:height">40dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#bd1f21</item>
     </style>
