--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,12 +23,12 @@
             android:text=""
             android:onClick="nextIntent"/>
 
-        <Button
-            style="@style/btnStyle"
-            android:id="@+id/btnLogTest"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Log Test"/>
+<!--        <Button-->
+<!--            style="@style/btnStyle"-->
+<!--            android:id="@+id/btnLogTest"-->
+<!--            android:layout_width="fill_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Log Test"/>-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleView_medicine"
