--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,14 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+<!--        android:background="@drawable/calendar_pic"-->
 
-        <Button
-            style="@style/btnStyle"
-            android:id="@+id/btnAddMed"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:onClick="nextIntent"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:src="@drawable/calendar_pic" />
+
+
 
 <!--        <Button-->
 <!--            style="@style/btnStyle"-->
@@ -33,8 +36,16 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleView_medicine"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/medicine_item"/>
+
+        <Button
+            style="@style/btnStyle"
+            android:id="@+id/btnAddMed"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="" />
+
 
     </LinearLayout>
 
