--- a/app/src/main/res/layout/fragment_medicine_step2_camera_image.xml
+++ b/app/src/main/res/layout/fragment_medicine_step2_camera_image.xml
@@ -43,7 +43,30 @@
                 android:layout_height="150dp"
                 />
         </TableRow>
+        <TableRow>
 
+            <TextView
+                style="@style/CustomText"
+                android:text="Shape" />
+
+            <Spinner
+                android:id="@+id/shapeSpinner"
+                android:layout_height="wrap_content"
+                android:width="80dp"
+                android:entries="@array/ShapeList" />
+        </TableRow>
+        <TableRow>
+
+            <TextView
+                style="@style/CustomText"
+                android:text="Shape Picture" />
+
+            <ImageView
+                android:id="@+id/imageShapeView"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                />
+        </TableRow>
     </TableLayout>
     <Button
         style="@style/btnStyle"
